Fix hidden h1 overflow

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -78,16 +78,25 @@ em {
   margin: 0 auto;
   max-width: 1100px;
   padding-left: 13%;
-  overflow: hidden;
 }
 
 header, section {
   padding-bottom: 4%;
 }
 
+header {
+  position: relative;
+
+  nav {
+    position: absolute;
+    overflow: hidden;
+    right: 0;
+    top: 30px;
+  }
+}
+
 .meta-nav {
   @extend .plain;
-  float: right;
   padding-top: 8px;
 
   li {
